--- a/index.html
+++ b/index.html
@@ -196,52 +196,18 @@
 
       <!-- movie section start -->
       <div class="row">
-        <div class="card text-bg-dark col-4">
-          <img
-            src="https://picsum.photos/id/345/400/600"
-            class="card-img"
-            alt="..."
-          />
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-            <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        <div class="card-group">
+          <div class="card">
+            <img src="https://picsum.photos/id/265/600/400" alt="card 1" />
+            <h5 class="card-header">Watch it now</h5>
           </div>
-        </div>
-        <div class="card text-bg-dark col-4">
-          <img
-            src="https://picsum.photos/id/343/400/600"
-            class="card-img"
-            alt="..."
-          />
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-            <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <div class="card">
+            <img src="https://picsum.photos/id/266/600/400" alt="card 1" />
+            <h5 class="card-header">Watch it now</h5>
           </div>
-        </div>
-        <div class="card text-bg-dark col-4">
-          <img
-            src="https://picsum.photos/id/342/400/600"
-            class="card-img"
-            alt="..."
-          />
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a wider card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
-            <p class="card-text"><small>Last updated 3 mins ago</small></p>
+          <div class="card">
+            <img src="https://picsum.photos/id/267/600/400" alt="card 1" />
+            <h5 class="card-header">Watch it now</h5>
           </div>
         </div>
       </div>
