--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
       <!-- Carosel end -->
 
       <!-- movie section start -->
-      <div class="row">
+      <div class="row bg-secondary py-4">
+        <h3>Movies</h3>
         <div class="card-group">
           <div class="card">
             <img src="https://picsum.photos/id/265/600/400" alt="card 1" />
