--- a/index.html
+++ b/index.html
@@ -4,108 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>neplix</title>
-    <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="/favicon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <!-- icon CDN -->
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      defer
-    ></script>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="/assets/style.css" />
-    <!-- JS -->
-    <script src="/assets/script.js" defer></script>
+    <script src="/assets/script.js"></script>
+    <!-- <script src="home.js"></script> -->
   </head>
   <body>
     <!-- Navbar start -->
-    <nav
-      class="navbar navbar-expand-lg bg-body-tertiary sticky-top"
-      aria-label="Thirteenth navbar example"
-    >
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarsExample11"
-          aria-controls="navbarsExample11"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
-          <a class="navbar-brand col-lg-3 me-0" href="#"
-            ><img src="/assets/logo.svg" alt="brand-logo" height="40"
-          /></a>
-          <ul class="navbar-nav col-lg-6 justify-content-lg-center">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                >Dropdown</a
-              >
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-            <button class="btn btn-primary">Button</button>
-          </div>
-        </div>
-      </div>
-    </nav>
+     <script src="/assets/navbar.js"></script>
     <!-- Nabar end -->
     <main>
       <!-- Carosel start -->
@@ -215,184 +119,7 @@
       <!-- movie section end -->
     </main>
     <!-- Footer start -->
-    <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
-      <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-        <div class="row">
-          <div class="col-lg-3 mb-3">
-            <a
-              class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none"
-              href="/"
-              aria-label="Bootstrap"
-            >
-              <img src="/assets/logo.svg" alt="brand-logo" height="60" />
-            </a>
-            <ul class="list-unstyled small">
-              <li class="mb-2">
-                Designed and built with all the love in the world by the
-                <a href="/docs/5.3/about/team/">Bootstrap team</a> with the help
-                of
-                <a href="https://github.com/twbs/bootstrap/graphs/contributors"
-                  >our contributors</a
-                >.
-              </li>
-              <li class="mb-2">
-                Code licensed
-                <a
-                  href="https://github.com/twbs/bootstrap/blob/main/LICENSE"
-                  target="_blank"
-                  rel="license noopener"
-                  >MIT</a
-                >, docs
-                <a
-                  href="https://creativecommons.org/licenses/by/3.0/"
-                  target="_blank"
-                  rel="license noopener"
-                  >CC BY 3.0</a
-                >.
-              </li>
-              <li class="mb-2">Currently v5.3.3.</li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-            <h5>Links</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="/">Home</a></li>
-              <li class="mb-2"><a href="/docs/5.3/">Docs</a></li>
-              <li class="mb-2"><a href="/docs/5.3/examples/">Examples</a></li>
-              <li class="mb-2">
-                <a href="https://icons.getbootstrap.com/">Icons</a>
-              </li>
-              <li class="mb-2">
-                <a href="https://themes.getbootstrap.com/">Themes</a>
-              </li>
-              <li class="mb-2">
-                <a href="https://blog.getbootstrap.com/">Blog</a>
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://cottonbureau.com/people/bootstrap"
-                  target="_blank"
-                  rel="noopener"
-                  >Swag Store</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3">
-            <h5>Guides</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2">
-                <a href="/docs/5.3/getting-started/">Getting started</a>
-              </li>
-              <li class="mb-2">
-                <a href="/docs/5.3/examples/starter-template/"
-                  >Starter template</a
-                >
-              </li>
-              <li class="mb-2">
-                <a href="/docs/5.3/getting-started/webpack/">Webpack</a>
-              </li>
-              <li class="mb-2">
-                <a href="/docs/5.3/getting-started/parcel/">Parcel</a>
-              </li>
-              <li class="mb-2">
-                <a href="/docs/5.3/getting-started/vite/">Vite</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3">
-            <h5>Projects</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/bootstrap"
-                  target="_blank"
-                  rel="noopener"
-                  >Bootstrap 5</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/bootstrap/tree/v4-dev"
-                  target="_blank"
-                  rel="noopener"
-                  >Bootstrap 4</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/icons"
-                  target="_blank"
-                  rel="noopener"
-                  >Icons</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/rfs"
-                  target="_blank"
-                  rel="noopener"
-                  >RFS</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/examples/"
-                  target="_blank"
-                  rel="noopener"
-                  >Examples repo</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-lg-2 mb-3">
-            <h5>Community</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/bootstrap/issues"
-                  target="_blank"
-                  rel="noopener"
-                  >Issues</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://github.com/twbs/bootstrap/discussions"
-                  target="_blank"
-                  rel="noopener"
-                  >Discussions</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://github.com/sponsors/twbs"
-                  target="_blank"
-                  rel="noopener"
-                  >Corporate sponsors</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://opencollective.com/bootstrap"
-                  target="_blank"
-                  rel="noopener"
-                  >Open Collective</a
-                >
-              </li>
-              <li class="mb-2">
-                <a
-                  href="https://stackoverflow.com/questions/tagged/bootstrap-5"
-                  target="_blank"
-                  rel="noopener"
-                  >Stack Overflow</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
+    <script src="/assets/footer.js"></script>
     <!-- Footer end -->
   </body>
 </html>
